--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,20 @@ html body {
 }
 
 .main-menu.menu-light .navigation > li ul .active > a {
-    color: #ff6d5a;;
+    color: #ff6d5a;
 }
 
 body.vertical-layout.vertical-menu.menu-collapsed .main-menu .main-menu-content > span.menu-title, body.vertical-layout.vertical-menu.menu-collapsed .main-menu .main-menu-content a.menu-title {
-    background-color: #ff6d5a;;
+    background-color: #ff6d5a;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    font-size: 12px;
+    margin-top: 2px !important;
+}
+
+.select2-container--default .select2-selection--multiple, .select2-container--default .select2-selection--single {
+    border-color: #ccd6e6;
 }
 
 .form-control:focus {
@@ -68,5 +77,14 @@ body.vertical-layout.vertical-menu.menu-expanded .main-menu .navigation > li > a
 
 body.vertical-layout.vertical-menu.menu-collapsed .main-menu .navigation > li > a, body.vertical-layout.vertical-menu.menu-collapsed .main-menu .navigation > li.open > a {
     padding: 10px 0px !important;
+    text-align: center;
+}
+
+.table-horario-empresa th, .table-horario-empresa td {
+    padding: 5px;
+    text-align: center;
+}
+
+.table-horario-empresa input::-webkit-input-placeholder {
     text-align: center;
 }
