Updates e Pagina de Criação de Conta

--- a/app-assets/css/pages/ex-component-tour.css
+++ b/app-assets/css/pages/ex-component-tour.css
@@ -1,10 +1,10 @@
 .shepherd-element {
   background: transparent; }
   .shepherd-element.shepherd-element-attached-right .shepherd-arrow {
-    border-left-color: #00b5b8 !important;
+    border-left-color: #ededed !important;
     border-bottom-color: transparent !important; }
   .shepherd-element .shepherd-arrow {
-    border-bottom-color: #00b5b8 !important; }
+    border-bottom-color: #ededed !important; }
 
 .tour-container {
   font-size: 1rem; }
@@ -13,7 +13,7 @@
     .tour-container .shepherd-header .shepherd-title {
       color: #fff; }
   .tour-container.shadow-md .shepherd-content, .tour-container.bg-purple-dark .shepherd-content {
-    background-color: #00b5b8 !important;
+    background-color: #ededed !important;
     border-radius: .5rem;
     padding: 10px; }
     .tour-container.shadow-md .shepherd-content .shepherd-text, .tour-container.bg-purple-dark .shepherd-content .shepherd-text {
