--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,3 @@
-/*================================================================================
-	Item Name: Stack - Responsive Admin Theme
-	Author: PIXINVENT
-	Author URL: http://www.themeforest.net/user/pixinvent
-================================================================================
-
-NOTE:
-------
-PLACE HERE YOUR OWN SCSS CODES AND IF NEEDED, OVERRIDE THE STYLES FROM THE OTHER STYLESHEETS.
-WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BETTER LIKE THIS.  */
 
 .pl-c1, .px-c1 { padding-left: 5px !important;}
 .pr-c1, .px-c1 { padding-right: 5px !important;}
@@ -18,7 +8,6 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 .mr-c1, .mx-c1 { margin-right: 5px !important;}
 .mt-c1, .my-c1 { margin-top: 5px !important;}
 .mb-c1, .my-c1 { margin-bottom: 5px !important;}
-
 
 html body {
     background-color: #f5f8fa;
@@ -58,6 +47,14 @@ html body {
 .main-menu.menu-light .navigation li a {
     color: #32465a;
     font-weight: 500;
+}
+
+.main-menu.menu-light .navigation li.active {
+    border-left: 4px solid #ff6d5a;
+}
+
+.main-menu.menu-light .navigation > li.active > a {
+    color: #ff6d5a;   
 }
 
 .main-menu.menu-light .navigation > li.open {
