Update Visual e Add Agenda 10 dias Painel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,12 @@
-
-.pl-c1, .px-c1 { padding-left: 5px !important;}
-.pr-c1, .px-c1 { padding-right: 5px !important;}
-.pt-c1, .py-c1 { padding-top: 5px !important;}
-.pb-c1, .py-c1 { padding-bottom: 5px !important;}
-
-.ml-c1, .mx-c1 { margin-left: 5px !important;}
-.mr-c1, .mx-c1 { margin-right: 5px !important;}
-.mt-c1, .my-c1 { margin-top: 5px !important;}
-.mb-c1, .my-c1 { margin-bottom: 5px !important;}
-
 html body {
     background-color: #f5f8fa;
+}
+
+#reportrange {
+    cursor: pointer;
+    margin-left: 3px;
+    background: #fff;
+    text-align: center;
 }
 
 .text-muted {
@@ -138,3 +134,62 @@ body.vertical-layout.vertical-menu.menu-collapsed .main-menu .navigation > li > 
     background: #e6fcff !important;
     color: #1b2942 !important;
 }
+
+.btn-white, .btn-white:hover, .btn-white:focus, .btn-white:active {
+    border-color: !important;
+    background-color: #FFFFFF !important;
+    color: #333 !important;
+}
+
+.fab, .far {
+    font-weight: 600;
+}
+
+.painel-agenda-item.dropdown-toggle::after {
+    color: rgba(0, 0, 0, 0.5) !important;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.painel-agenda-hora {
+    padding-top: 8px;
+}
+.painel-agenda-hora, .painel-agenda-slot {
+    height: 33px !important;
+}
+
+.p-c1 { padding: 5px !important;}
+.pl-c1, .px-c1 { padding-left: 5px !important;}
+.pr-c1, .px-c1 { padding-right: 5px !important;}
+.pt-c1, .py-c1 { padding-top: 5px !important;}
+.pb-c1, .py-c1 { padding-bottom: 5px !important;}
+
+.m-c1 { margin: 5px !important;}
+.ml-c1, .mx-c1 { margin-left: 5px !important;}
+.mr-c1, .mx-c1 { margin-right: 5px !important;}
+.mt-c1, .my-c1 { margin-top: 5px !important;}
+.mb-c1, .my-c1 { margin-bottom: 5px !important;}
+
+.p-1 { padding: 10px !important;}
+.pl-1, .px-1 { padding-left: 10px !important;}
+.pr-1, .px-1 { padding-right: 10px !important;}
+.pt-1, .py-1 { padding-top: 10px !important;}
+.pb-1, .py-1 { padding-bottom: 10px !important;}
+
+.m-1 { margin: 10px !important;}
+.ml-1, .mx-1 { margin-left: 10px !important;}
+.mr-1, .mx-1 { margin-right: 10px !important;}
+.mt-1, .my-1 { margin-top: 10px !important;}
+.mb-1, .my-1 { margin-bottom: 10px !important;}
+
+.p-2 { padding: 15px !important;}
+.pl-2, .px-2 { padding-left: 15px !important;}
+.pr-2, .px-2 { padding-right: 15px !important;}
+.pt-2, .py-2 { padding-top: 15px !important;}
+.pb-2, .py-2 { padding-bottom: 15px !important;}
+
+.m-2 { margin: 15px !important;}
+.ml-2, .mx-2 { margin-left: 15px !important;}
+.mr-2, .mx-2 { margin-right: 15px !important;}
+.mt-2, .my-2 { margin-top: 15px !important;}
+.mb-2, .my-2 { margin-bottom: 15px !important;}
